# wcag-search-alfred-workflow

./: .gitignore  Cargo.toml  Readme.md  Todo.md
.github/workflows/: release.yaml
src/: alfred.rs  fuzzy.rs  loader.rs  main.rs  scoring.rs
workflow/: info.plist  wcag.json
