[package]
name = "wcag-alfred-workflow"
version = "0.1.0"
edition = "2021"
authors = ["Bogdan Lazar <bogdan@bogdanlazar.com>"]
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.65"
either = "1.8.0"
powerpack = { version = "0.4.2", features = ["detach"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[profile.release]
panic = "abort"
strip = true
lto = true
